# ogclews-prep

./: .gitignore  README.md  test_result.txt
01_og_runner/: conftest.py  readme.md  requirements.txt  run.py
01_og_runner/configs/: example_config.yaml
01_og_runner/runner/: log_capture.py
01_og_runner/tests/: test_config_loader.py
02_etl_pipeline/: README.md  conftest.py  requirements.txt
02_etl_pipeline/exchange/: schema_clews_to_og.yaml  transformer.py  validator.py
03_Validation_framework/: README.md  requirements.txt  run_validation.py
03_Validation_framework/schemas/: clews_input_schema.yaml  og_input_schema.yaml
03_Validation_framework/tests/: test_file_validator.py  test_schema_validator.py
03_Validation_framework/validator/: file_validator.py  schema_validator.py
04_convergence_prototype/: README.md  run_convergence.py
04_convergence_prototype/convergence/: __init__.py  metrics.py  mock_clews.py  mock_ogcore.py  orchestrator.py
05_ogcore_api/: README.md
05_ogcore_api/API/: app_patch.py
06_country_scenario/: README.md  requirements.txt
07_frontend_dashboard/: index.html  package-lock.json  package.json
08_integration_api/: main.py
Validation_framework/: conftest.py  pyproject.toml
Validation_framework/sample_data/: invalid_og_config.json  valid_og_config.json
Validation_framework/tests/: test_error_formatter.py
Validation_framework/validator/: __init__.py  error_formatter.py  models.py
etl_pipeline/: README.md  pyproject.toml  requirements.txt  run_etl.py
etl_pipeline/tests/: conftest.py  (+3 more)
og_runner/: .gitignore  readme.md
(+26 files in other folders)
